<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cubic_Dictionary</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">WELCOME !!! </string>
    <string name="alpha">Alpha</string>
    <string name="select">Choose Option :</string>
    <string name="france">France</string>
    <string name="germany">Germany</string>
    <string name="Spain">Spain</string>
    <string name="Hear">Listen</string>
    <string name="Exit">Exit</string>
    <string name="French">French</string>
    <string name="German">German</string>
    <string name="Spanish">Spanish</string>
    <string name="title_activity_french">French</string>
    <string name="Vocabulary">Vocabulary</string>
    <string name="Search">Search</string>
    <string name="Enter">Please Enter Your Word here :-</string>
    <string name="AutoCompleteTextView">Enter Here</string>
    <string name="Information">Information</string>
    <string name="title_activity_french__vocab">FrenchVocabulary</string>
    <string name="Select_Option">Choose option</string>
    <string name="title_activity_german">German</string>
    <string name="title_activity_deutsch_vocabulary">DeutschVocabulary</string>
    <string name="title_activity_spanish">Spanish</string>
    <string name="title_activity_spanisch_vocabulary">SpanischVocabulary</string>
    <string name="vocab">Vocab</string>
    <string name="TVSpain"></string>
    <string name="TVGerman"></string>
    <string name="TVFrench"></string>
    <string name="title_activity_cubic_flash">CubicFlash</string>
    <string name="title_activity_cubic">Cubic</string>
    <string name="title_activity_spain">Spain</string>
    <string name="title_activity_franzozisch_vocabulaire">FranzozischVocabulaire</string>
    <string name="title_activity_search_words">SearchGerman</string>
    <string name="title_activity_search_french">SearchFrench</string>
    <string name="title_activity_search_spanish">SearchSpanish</string>
    <string name="title_activity_listen_german">ListenGerman</string>
    <string name="TextToSpeech">Text To Speech</string>
    <string name="title_activity_listen_french">ListenFrench</string>
    <string name="title_activity_listen_spanish">ListenSpanish</string>
    <string name="title_activity_german_information">GermanInformation</string>
    <string name="info">The Imperial Crown of the kings of the Holy Roman Empire</string>
    <string name="germanflag">germanflag</string>
    <string name="emperor">Emp</string>
    <string name="start">GERMAN/DEUTSCHLAND</string>
    <string name="abt"></string>
    <string name="title_activity_french_information">FrenchInformation</string>
    <string name="titlef">FRANCE</string>
    <string name="titles">SPAIN</string>
    <string name="ans"></string>
    <string name="title_activity_spain_information">SpainInformation</string>

</resources>
