<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Cubic" >

    <TextView
        android:id="@+id/tvstrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:textColor="@android:color/background_light"
        android:text="@string/select"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textSize="30sp"/>

    <ImageView
        android:id="@+id/ivgerman"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/ivfrench"
        android:layout_below="@+id/ivfrench"
        android:layout_marginTop="34dp"
        android:contentDescription="@string/germany"
        android:src="@drawable/g" />

    <ImageView
        android:id="@+id/ivfrench"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/tvstrt"
        android:layout_below="@+id/tvstrt"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/france"
        android:src="@drawable/f" />

    <TextView
        android:id="@+id/tvemp"
        android:layout_width="wrap_content"
        android:layout_height="20sp"
        android:layout_alignBottom="@+id/ivfrench"
        android:layout_alignTop="@+id/ivfrench"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/ivfrench"
        android:text="@string/French"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/ivspain"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginBottom="16dp"
        android:text="@string/Spanish"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/ivspain"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@+id/ivgerman"
        android:layout_marginTop="37dp"
        android:layout_toLeftOf="@+id/tvemp"
        android:contentDescription="@string/Spain"
        android:src="@drawable/s" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvemp"
        android:layout_alignTop="@+id/ivgerman"
        android:layout_marginTop="16dp"
        android:text="@string/German"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

</RelativeLayout>
