<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SpainInformation" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/Spain"
        android:scaleType="fitXY"
        android:src="@drawable/s_place" />

	  <TextView
	      android:id="@+id/tvstart"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_alignLeft="@+id/imageView1"
	      android:layout_below="@+id/imageView1"
	      android:layout_marginTop="19dp"
	      android:text="@string/titles" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="400sp"
        android:layout_height="400dp"
        android:layout_alignLeft="@+id/tvstart"
        android:layout_below="@+id/tvstart" >

        
        <TextView
            android:id="@+id/tvabt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abt" />
    </ScrollView>

</RelativeLayout>
