<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ListenGerman" >

    <TextView
        android:id="@+id/tvstrt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dip"
        android:text="@string/TextToSpeech"
        android:textColor="#0587d9"
        android:textSize="26sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnhear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:background="@android:color/background_dark"
        android:textColor="#CEF6F5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/Hear" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvstrt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:textColor="#CEF6F5"
        android:ems="10"
        android:hint="@string/Enter" >

        <requestFocus />
    </EditText>

</RelativeLayout>